java 17 compliant